#pragma once

enum class LightState { Red, Green, Amber, FlashingAmber, AllRed };

