from typing import List
from .intersection import Intersection
from .control_algorithm import ControlAlgorithm
from .safety_checker import SafetyChecker
from .traffic_generator import TrafficGenerator
from .kpi_report import KPIReport
from .recorder import Recorder
from .playback import Playback
from .signal_phase import SignalPhase
from .light_state import LightState
from .spawned_vehicle import SpawnedVehicle

class Simulation:
    def __init__(self, intersection: Intersection, algorithm: ControlAlgorithm, safetyChecker: SafetyChecker, generator: TrafficGenerator):
        self.running = False
        self.simulationIntersection = intersection
        self.algorithm = algorithm
        self.safety = safetyChecker
        self.generator = generator
        self.kpis = KPIReport()
        self.runRecorder = Recorder()
        self.lastSpawned: List[SpawnedVehicle] = []
        self._waiting: dict[str, list[SpawnedVehicle]] = {a: [] for a in self.simulationIntersection.approachIds()} if hasattr(self, 'simulationIntersection') else {}
        # current applied phase and remaining time (seconds)
        self._currentPhase: SignalPhase | None = None
        self._phase_time_remaining: float = 0.0
        # vehicles generated by the traffic generator this tick (for visualization)
        self._generatedThisTick: List[SpawnedVehicle] = []

    def start(self) -> None:
        self.running = True
        self.runRecorder.clear()
        self.kpis.recordMetric("runtime_seconds", 0.0)

    def stop(self) -> None:
        self.running = False

    def isRunning(self) -> bool:
        return self.running

    def step(self) -> None:
        if not self.running:
            return
        # manage phase timing: only advance to next phase when the previous one's
        # duration has elapsed. Each `step()` call represents ~1 second.
        if self._currentPhase is None:
            phase = self.algorithm.nextPhase()
            chosenPhase = phase if self.safety.validate(phase) else self.safety.fallbackPhase(self.simulationIntersection.approachIds())
            self._currentPhase = chosenPhase
            self._phase_time_remaining = chosenPhase.getDurationSeconds()
            self.simulationIntersection.applyPhase(chosenPhase)
        else:
            # decrement remaining time (assume 1s per step call)
            self._phase_time_remaining -= 1.0
            if self._phase_time_remaining <= 0:
                phase = self.algorithm.nextPhase()
                chosenPhase = phase if self.safety.validate(phase) else self.safety.fallbackPhase(self.simulationIntersection.approachIds())
                self._currentPhase = chosenPhase
                self._phase_time_remaining = chosenPhase.getDurationSeconds()
                self.simulationIntersection.applyPhase(chosenPhase)

        # process previously waiting vehicles: if their approach is now green, they pass through
        passed: list[SpawnedVehicle] = []
        for approach in self.simulationIntersection.approachIds():
            waiting_list = self._waiting.get(approach, [])
            if not waiting_list:
                continue
            light = self.simulationIntersection.findApproach(approach).light().getState()
            if light == None:
                continue
            if light == LightState.Green:
                for v in waiting_list:
                    app = self.simulationIntersection.findApproach(v.approachId)
                    if app is not None:
                        app.sensor().observeVehicle()
                        passed.append(v)
                self._waiting[approach] = []

        # spawn new vehicles and either let them pass (if green) or queue them at the stop line
        new_spawned = self.generator.spawnVehicles()
        # record generated list for external consumers (GUI visualization)
        self._generatedThisTick = list(new_spawned)
        for spawn in new_spawned:
            approach = self.simulationIntersection.findApproach(spawn.approachId)
            if approach is None:
                continue
            if approach.light().getState() == LightState.Green:
                approach.sensor().observeVehicle()
                passed.append(spawn)
            else:
                # not green: vehicle stops at the approach
                self._waiting.setdefault(spawn.approachId, []).append(spawn)

        self.lastSpawned = list(passed)

        current_name = self._currentPhase.getName() if self._currentPhase is not None else "--"
        self.runRecorder.recordEvent(f"Phase:{current_name} VehiclesPassed:{len(passed)} Waiting:{sum(len(v) for v in self._waiting.values())}")

        vehicleCount = sum(float(a.sensor().getCount()) for a in self.simulationIntersection.approaches())
        self.kpis.recordMetric("vehicle_count", vehicleCount)

    def intersection(self) -> Intersection:
        return self.simulationIntersection

    def controlAlgorithm(self) -> ControlAlgorithm:
        return self.algorithm

    def kpiReport(self) -> KPIReport:
        return self.kpis

    def recorder(self) -> Recorder:
        return self.runRecorder

    def playback(self) -> Playback:
        return Playback(self.runRecorder.events())

    def recentSpawned(self) -> List[SpawnedVehicle]:
        return list(self.lastSpawned)

    def generatedThisTick(self) -> List[SpawnedVehicle]:
        return list(self._generatedThisTick)
